Fix: Mobile Header alignment fix.

--- a/src/components/Layout/style.scss
+++ b/src/components/Layout/style.scss
@@ -2,6 +2,12 @@
   margin-right: 10px;
 }
 
+.mobile-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .nav-menu {
   background-color: transparent;
 }
